# agent-tattoo

./: AGENT.md  README.md  pyproject.toml  wrangler.toml
.github/workflows/: ci.yml
agent_tattoo/: __init__.py  collection.py  display.py  earner.py  story.py  tattoo.py
memory/: JOURNAL.md
src/: worker.ts
tests/: test_tattoo.py
